# orbit-wars

./: .gitignore  CLAUDE.md  README.md  main.py  main_bare.py  main_bare_b.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: implementer.md  kaggle-runner.md  pr-author.md  researcher.md  score-analyzer.md
.claude/hooks/: analyze-deviations.sh  auto-commit-safe.sh  auto-lint-fmt.sh  guard-dangerous-bash.sh  kaggle-quota-guard.sh  load-state.sh  record-submission.sh  trigger-next-iteration.sh
.github/workflows/: ci.yml
docs/: COMPETITION.md  HARNESS.md  PLAN.md  auth-and-secrets.md  ultraplan-iter2-prompt.md  ultraplan-prompt.md
experiments/: ledger.jsonl
kaggle_notebooks/nn-value-data-prev/: kernel-metadata.json  nn_value_data_prev.py
kaggle_notebooks/nn-value-train/: kernel-metadata.json  nn_value_train.py
scripts/kaggle/: build_nn_submission.py  check_mix_gate.py  episodes.sh  leaderboard.sh  mix_eval_gate.sh  pull_output.sh  push_notebook.sh  replays.sh  submit.sh  verify_submission.sh  wait_run.sh
scripts/nn/: quantize_onnx.py  smoke_eval_stage.py  train_value.py
scripts/orchestrator/: awaiting_lb_recommender.sh  backup.sh  check_budget.sh  daily_report.sh  notify_on_ci.sh  orchestrator_loop.sh  (+6 more)
state/: README.md  best_score.json  budget_ceiling.json  hypotheses.md  last_mix_eval.json  learned_rules.md  quota.json
tests/: conftest.py  test_action_legal.py  test_mix_eval_gate.py  test_nn_submission.py  test_observation_robustness.py  test_projection.py  test_threat.py  test_timing.py  test_winrate_runner_provenance.py
(+35 files in other folders)
